--- a/style.css
+++ b/style.css
@@ -1,56 +1,64 @@
 body {
-    background: linear-gradient(to right, #1b0802, #0c0901);
-    color: rgb(255, 255, 255); 
-    font-family: Arial, sans-serif;
-}
-.navbar{
-    margin-top: 20px;
-}
-.navbar .nav-link {
-    color: white;
-}
-.navbar .navbar-brand{
-font-size: 40px;
-margin-left: 20px;
+  background: linear-gradient(
+    to right,
+    #45100c,
+    #160201,
+    #160201,
+    #160201,
+    #160201,
+    #160201,
+    #160201,
+    #160201,
+    #0b0100,
+    #0b0100
+  );
+  font-family: Arial, sans-serif;
 }
 
+.navbar .nav-link {
+  color: white;
+}
+.navbar .navbar-brand {
+  font-size: 40px;
+  margin-left: 20px;
+}
 
 .hero {
-    padding-top: 100px;
-    color: white;
+  padding-top: 100px;
+  color: white;
 }
 
 .hero h1 {
-    font-size: 70px;
-    font-weight: bold;
-    margin-bottom: 0;
+  font-size: 70px;
+  font-weight: bold;
+  margin-bottom: 0;
 }
 
 .hero p {
-    font-size: 18px;
-    color: white;
+  font-size: 18px;
+  color: white;
 }
 
 .hero img {
-    width: 300px; 
-    height: 80px;
-    border-radius: 50px;
-    object-fit: cover;
-    padding-left: 0;
-    margin-left: 20px; 
+  width: 300px;
+  height: 80px;
+  border-radius: 50px;
+  object-fit: cover;
+  padding-left: 0;
+  margin-left: 20px;
 }
-.hero .third-row{
-    margin-top: 50px;
+.hero .third-row {
+  margin-top: 50px;
 }
-.hero .third-row .btn{
-    background-color: #b75365;
-    border-radius: 20px;
-    width: auto;
-    height: fit-content;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: white;
+.hero .third-row .btn {
+  background-color: #b75365;
+  border-radius: 20px;
+  width: auto;
+  height: fit-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: white;
 }
-.hero .third-row p{
-    width: 400px;
+.hero .third-row p {
+  width: 400px;
 }
